Added turkey.html, added table to new page, changed some css

--- a/turkeys.html
+++ b/turkeys.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Wings Wildlife Studio</title>
+    <title>Turkeys</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet">
@@ -50,14 +50,60 @@ Include Srcset-->
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-12 text-center main-title">
-                <h2>Home</h2>
+                <h2>Turkeys</h2>
             </div>
         </div>
         <section class="row text-center main">
-            <div class="col-xs-12">
-                <p><h3>Welcome to Wings Wildlife Studio!</h3> We are located in Fall City, Washington, just 30 minutes east of Seattle. We specialize in bird taxidermy and take pride in presenting quality mounts to our customers. We offer a variety of options to create a custom piece that is unique to your bird with pose and habitat.</p>
-            </div>
-        </section>
+    <div class="col-xs-12">
+        <div class="table-responsive">
+            <table class="table">
+                <thead>Turkeys</thead>
+                <tbody>
+                    <tr>
+                        <td>1/2 Strut</td>
+                        <td>800</td>
+                    </tr>
+                    <tr>
+                        <td>3/4 strut</td>
+                        <td>800</td>
+                    </tr>
+                    <tr>
+                        <td>Full Strut / Full Shingle</td>
+                        <td>900</td>
+                    </tr>
+                    <tr>
+                        <td>Flying (Wall) Mount</td>
+                        <td>800</td>
+                    </tr>
+                    <tr>
+                        <td>Freeze-Dried Head</td>
+                        <td>125</td>
+                    </tr>
+                    <tr>
+                        <td>Rug Shadow Box w/ Glass</td>
+                        <td>*Ask</td>
+                    </tr>
+                    <tr>
+                        <td>Tail Mount</td>
+                        <td>150</td>
+                    </tr>
+                    <tr>
+                        <td>Wing and Tail Mount</td>
+                        <td>300</td>
+                    </tr>
+                    <tr>
+                        <td>Multiple Beard Board</td>
+                        <td>200</td>
+                    </tr>
+                    <tr>
+                        <td>Tail Bacl and Beard</td>
+                        <td>300</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
     </div>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
