fixed table, add more columns to turkey.html and added pictures

--- a/turkeys.html
+++ b/turkeys.html
@@ -53,11 +53,21 @@ Include Srcset-->
                 <h2>Turkeys</h2>
             </div>
         </div>
-        <section class="row text-center main">
-    <div class="col-xs-12">
+        <section class="row main">
+            <div class="col-xs-3 col-md-3">
+                <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
+                <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
+                <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
+            </div>
+            <div class="col-xs-3 col-md-3">
+                <img class="img-responsive gallery" src="img/bird.jpg" alt="bird">
+                <img class="img-responsive gallery" src="img/bird3.jpg" alt="bird">
+            </div>
+    <div class="col-xs-6 col-md-6">
         <div class="table-responsive">
-            <table class="table">
-                <thead>Turkeys</thead>
+            <table class="table table-hover">
+                <thead><td>Turkeys</td>
+                        <td>Price</td></thead>
                 <tbody>
                     <tr>
                         <td>1/2 Strut</td>
@@ -96,7 +106,7 @@ Include Srcset-->
                         <td>200</td>
                     </tr>
                     <tr>
-                        <td>Tail Bacl and Beard</td>
+                        <td>Tail Back and Beard</td>
                         <td>300</td>
                     </tr>
                 </tbody>
