--- a/turkeys.html
+++ b/turkeys.html
@@ -104,22 +104,22 @@ Include Srcset-->
             </table>
         </div>
     </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
                 <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
                 <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
                 <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
                 <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
                 <img class="img-responsive gallery" src="img/bird.jpg" alt="bird">
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-3">
                 <img class="img-responsive gallery" src="img/bird3.jpg" alt="bird">
             </div>
 </section>
