changed color of table:hover and table lines

--- a/turkeys.html
+++ b/turkeys.html
@@ -103,6 +103,7 @@ Include Srcset-->
                 </tbody>
             </table>
         </div>
+        <p> We could add additonal details down here if you would like.</p>
     </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
