changed columns again

--- a/turkeys.html
+++ b/turkeys.html
@@ -12,6 +12,7 @@
 </head>
 <!--To Do:
 Include Srcset-->
+
 <body>
     <div class="container">
         <div class="row">
@@ -26,27 +27,27 @@ Include Srcset-->
             </div>
         </header>
         <div class="row">
-                    <div class="col-xs-12 col-md-12">
-                        <ul class="topnav" id="myTopnav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="turkeys.html">Turkeys</a></li>
-                            <li><a href="#waterfowl">Waterfowl</a></li>
-                            <li><a href="#busts">Busts</a></li>
-                            <li><a href="#upland">Upland</a></li>
-                            <li><a href="#domestic/exotic">Domestic/Exotic</a></li>
-                            <li><a href="#bearrugs">Bear Rugs</a></li>
-                            <li><a href="#habitats">Habitats</a></li>
-                            <li><a href="#fieldcare">Field Care</a></li>
-                            <li class="icon">
-                                <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
-                            </li>
-                        </ul>
+            <div class="col-xs-12 col-md-12">
+                <ul class="topnav" id="myTopnav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="turkeys.html">Turkeys</a></li>
+                    <li><a href="#waterfowl">Waterfowl</a></li>
+                    <li><a href="#busts">Busts</a></li>
+                    <li><a href="#upland">Upland</a></li>
+                    <li><a href="#domestic/exotic">Domestic/Exotic</a></li>
+                    <li><a href="#bearrugs">Bear Rugs</a></li>
+                    <li><a href="#habitats">Habitats</a></li>
+                    <li><a href="#fieldcare">Field Care</a></li>
+                    <li class="icon">
+                        <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="row">
-                <div class="col-md-12">
-                    <hr>
-                </div>
+            <div class="col-md-12">
+                <hr>
+            </div>
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-12 text-center main-title">
@@ -54,78 +55,91 @@ Include Srcset-->
             </div>
         </div>
         <section class="row main">
-            <div class="col-xs-12 col-md-6">
-        <div class="table-responsive">
-            <table class="table table-hover">
-                <thead><td>Turkeys</td>
-                        <td>Price</td></thead>
-                <tbody>
-                    <tr>
-                        <td>1/2 Strut</td>
-                        <td>800</td>
-                    </tr>
-                    <tr>
-                        <td>3/4 strut</td>
-                        <td>800</td>
-                    </tr>
-                    <tr>
-                        <td>Full Strut / Full Shingle</td>
-                        <td>900</td>
-                    </tr>
-                    <tr>
-                        <td>Flying (Wall) Mount</td>
-                        <td>800</td>
-                    </tr>
-                    <tr>
-                        <td>Freeze-Dried Head</td>
-                        <td>125</td>
-                    </tr>
-                    <tr>
-                        <td>Rug Shadow Box w/ Glass</td>
-                        <td>*Ask</td>
-                    </tr>
-                    <tr>
-                        <td>Tail Mount</td>
-                        <td>150</td>
-                    </tr>
-                    <tr>
-                        <td>Wing and Tail Mount</td>
-                        <td>300</td>
-                    </tr>
-                    <tr>
-                        <td>Multiple Beard Board</td>
-                        <td>200</td>
-                    </tr>
-                    <tr>
-                        <td>Tail Back and Beard</td>
-                        <td>300</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <p> We could add additonal details down here if you would like.</p>
-    </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-8 col-md-6">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <td>Style</td>
+                            <td>Price</td>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Half Strut</td>
+                                <td>800</td>
+                            </tr>
+                            <tr>
+                                <td>Three-Quarters Strut</td>
+                                <td>800</td>
+                            </tr>
+                            <tr>
+                                <td>Full Strut / Full Shingle</td>
+                                <td>900</td>
+                            </tr>
+                            <tr>
+                                <td>Flying (Wall) Mount</td>
+                                <td>800</td>
+                            </tr>
+                            <tr>
+                                <td>Freeze-Dried Head</td>
+                                <td>125</td>
+                            </tr>
+                            <tr>
+                                <td>Rug Shadow Box w/ Glass</td>
+                                <td>*Ask</td>
+                            </tr>
+                            <tr>
+                                <td>Tail Mount</td>
+                                <td>150</td>
+                            </tr>
+                            <tr>
+                                <td>Wing and Tail Mount</td>
+                                <td>300</td>
+                            </tr>
+                            <tr>
+                                <td>Multiple Beard Board</td>
+                                <td>200</td>
+                            </tr>
+                            <tr>
+                                <td>Tail Back and Beard</td>
+                                <td>300</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <p> We could add additonal details down here if you would like.</p>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-3">
                 <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-4 col-md-3">
                 <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-4 col-md-3">
                 <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-4 col-md-3">
                 <img class="img-responsive gallery" src="img/bird2.jpg" alt="bird">
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-4 col-md-3">
                 <img class="img-responsive gallery" src="img/bird.jpg" alt="bird">
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-4 col-md-3">
                 <img class="img-responsive gallery" src="img/bird3.jpg" alt="bird">
             </div>
-</section>
+        </section>
+        <div class="row">
+            <div class="col-md-12">
+                <hr>
+            </div>
+        </div>
+        <footer class="row">
+            <div class="col-md-12">
+                <p>Contact info down here</p>
+            </div>
+        </footer>
     </div>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    </body>
+</body>
+
 </html>
