--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--To Do:
+Include Srcset
+Showcase eagle-->
+
 <!DOCTYPE html>
 <html>
 
@@ -10,8 +14,6 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet">
 </head>
-<!--To Do:
-Include Srcset-->
 <body>
     <div class="container">
         <div class="row">
