--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Showcase eagle-->
                 <h4>Hand-Crafted Taxidermy</h4>
             </div>
         </header>
-        <div class="row">
+        <nav class="row">
                     <div class="col-xs-12 col-md-12">
                         <ul class="topnav" id="myTopnav">
                             <li><a href="index.html">Home</a></li>
@@ -44,7 +44,7 @@ Showcase eagle-->
                             </li>
                         </ul>
             </div>
-        </div>
+        </nav>
         <div class="row">
                 <div class="col-md-12">
                     <hr>
