--- a/index.html
+++ b/index.html
@@ -57,9 +57,20 @@ Showcase eagle-->
         </div>
         <section class="row text-center main">
             <div class="col-xs-12">
-                <p><h3>Welcome to Wings Wildlife Studio!</h3> We are located in Fall City, Washington, just 30 minutes east of Seattle. We specialize in bird taxidermy and take pride in presenting quality mounts to our customers. We offer a variety of options to create a custom piece that is unique to your bird with pose and habitat.</p>
+                <p><h2>Welcome to Wings Wildlife Studio!</h2> We are located in Fall City, Washington, just 30 minutes east of Seattle. We specialize in bird taxidermy and take pride in presenting quality mounts to our customers. We offer a variety of options to create a custom piece that is unique to your bird with pose and habitat.</p>
+            <p>If you have any questions or would like to schedule an appointment* Please call: 425-591-7263</p>
             </div>
         </section>
+    <div class="row">
+            <div class="col-md-12">
+                <hr>
+            </div>
+        </div>
+    <footer class="row">
+            <div class="col-md-12">
+                <p>Contact info down here</p>
+            </div>
+        </footer>
     </div>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
