feat: added new logo/banner

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@ Showcase eagle-->
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-12 banner">
-                <img class="img-responsive" src="img/lake.jpg" alt="lake">
+            <div class="col-md-1"></div>
+            <div class="col-xs-12 col-md-10 banner">
+                <img class="img-responsive" src="img/wings.png" alt="wings">
             </div>
+            <div class="col-md-1"></div>
         </div>
         <header class="row">
             <div class="col-xs-12 col-md-12 text-center text-uppercase text-large">
                 <h1 class="text-thin">Wings Wildlife Studio</h1>
-                <h4>Hand-Crafted Taxidermy</h4>
+                <h4>Old World Taxidermy</h4>
             </div>
         </header>
         <nav class="row">
