changed footer to business name

--- a/turkeys.html
+++ b/turkeys.html
@@ -136,7 +136,7 @@ Include Srcset-->
         </div>
         <footer class="row">
             <div class="col-md-12">
-                <p>Contact info down here</p>
+                <p>Wings Wildlife Studio</p>
             </div>
         </footer>
     </div>
