--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Showcase eagle-->
         </div>
     <footer class="row">
             <div class="col-md-12">
-                <p>Contact info down here</p>
+                <p>Wings Wildlife Studio</p>
             </div>
         </footer>
     </div>
