--- a/turkeys.html
+++ b/turkeys.html
@@ -18,7 +18,7 @@ Include Srcset-->
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-xs-12 col-md-10 banner">
-                <img class="img-responsive" src="img/wings.png" alt="wings">
+                <img class="img-responsive" src="img/Wings.png" alt="Spread Wings">
             </div>
             <div class="col-md-1"></div>
         </div>
