changed image title

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Showcase eagle-->
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-xs-12 col-md-10 banner">
-                <img class="img-responsive" src="img/Wings.png" alt="Spread Wings">
+                <img class="img-responsive" src="img/spreadwings.png" alt="Spread Wings">
             </div>
             <div class="col-md-1"></div>
         </div>
