--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Showcase eagle-->
             </div>
         </header>
         <nav class="row">
-                    <div class="col-xs-12 col-md-12">
+                    <div class="col-xs-12 col-md-12 col-xl-12">
                         <ul class="topnav" id="myTopnav">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="turkeys.html">Turkeys</a></li>
