changed footer and added copyright icon

--- a/turkeys.html
+++ b/turkeys.html
@@ -135,14 +135,15 @@ Include Srcset-->
             </div>
         </div>
         <footer class="row">
-            <div class="col-md-12">
-                <p>Wings Wildlife Studio</p>
+            <div class="col-md-12 text-center">
+                <p><i class="fa fa-copyright" aria-hidden="true"></i> 2016 Wings Wildlife Studio. All rights reserved.</p>
             </div>
-        </footer>
+     </footer>
     </div>
     <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script src="https://use.fontawesome.com/98db72393a.js"></script>
 </body>
 
 </html>
