--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Showcase eagle-->
             </div>
         </header>
         <nav class="row">
-                    <div class="col-xs-12 col-md-12 col-xl-12">
+                    <div class="col-md-12">
                         <ul class="topnav" id="myTopnav">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="turkeys.html">Turkeys</a></li>
@@ -61,6 +61,7 @@ Showcase eagle-->
             <div class="col-xs-12">
                 <p><h2>Welcome to Wings Wildlife Studio!</h2> We are located in Fall City, Washington, just 30 minutes east of Seattle. We specialize in bird taxidermy and take pride in presenting quality mounts to our customers. We offer a variety of options to create a custom piece that is unique to your bird with pose and habitat.</p>
             <p>If you have any questions or would like to schedule an appointment* Please call: 425-591-7263</p>
+            <p>Each specimen is subject to assessment in order to determine if it is a mountable bird. A completed tag must accompany all birds received. See <a href="fieldcare.html">Field Care</a> page.</p>
             </div>
         </section>
     <div class="row">
@@ -69,13 +70,14 @@ Showcase eagle-->
             </div>
         </div>
     <footer class="row">
-            <div class="col-md-12">
-                <p>Wings Wildlife Studio</p>
+            <div class="col-md-12 text-center">
+                <p><i class="fa fa-copyright" aria-hidden="true"></i> 2016 Wings Wildlife Studio. All rights reserved.</p>
             </div>
-        </footer>
+     </footer>
     </div>
     <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script src="https://use.fontawesome.com/98db72393a.js"></script>
     </body>
 </html>
