--- a/fieldCare.html
+++ b/fieldCare.html
@@ -54,14 +54,34 @@ Showcase eagle-->
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-12 text-center main-title">
-                <h2>Home</h2>
+                <h2>Field Care</h2>
             </div>
         </div>
-        <section class="row text-center main">
+        <section class="row text-center main fieldCare">
             <div class="col-xs-12">
-                <p><h2>Welcome to Wings Wildlife Studio!</h2> We are located in Fall City, Washington, just 30 minutes east of Seattle. We specialize in bird taxidermy and take pride in presenting quality mounts to our customers. We offer a variety of options to create a custom piece that is unique to your bird with pose and habitat.</p>
-            <p>If you have any questions or would like to schedule an appointment* Please call: 425-591-7263</p>
-            <p>Each specimen is subject to assessment in order to determine if it is a mountable bird. A completed tag must accompany all birds received. See <a href="fieldCare.html">Field Care</a> page.</p>
+                <ul>
+                    <li>A good rule of thumb is to treat your bird in the field as if it's already been mounted. Be gentle.  We love our dogs, but even the softest-mouthed dog can create damage, so if possible, try to retrieve the bird before the dog. </li>
+                    <li>DO NOT wring the neck of your bird. If bird is wounded, firmly squeeze the chest under the wings (armpits), until bird expires. </li>
+                    <li>Do not field-dress/gut your bird.</li>
+                    <li>Do not tuck the head under a wing. </li>
+                    <li>Try to keep a gallon ziplock or bread bag with you when you hunt and place in the bag, then your game bag, however, it's best to carry the bird by the feet.  I prefer you DON'T use a nylon stocking. </li>
+                    <li>NEVER wrap your bird in newspaper of any kind, the newsprint can bleed on feathers. </li>
+                    <li>Wipe excess blood off with a wet cloth or paper towel. Use only water, even creek water is fine. </li>
+                    <li>Wrap bird's head in paper towel and fold over the bird's back (see photo) and freeze in double ziplock bag.</li>
+                </ul>
+                <br>
+                <p>If you already have a bird in the freezer and have not followed these instructions to the letter, that's fine, but we will need to assess specimen after it has been thawed.</p>
+            <h2 class="text-center">Delivery of Bird</h2>
+                <ul>
+                    <li>Deliver fresh if possible (if harvested the same day), otherwise freeze as indicated. </li>
+                    <li>If you need to ship a bird, call for specific instructions and shipping information. All shipping fees are in addition to the price of mount and paid by customer.</li>
+                </ul>
+            <h2 id="tags" class="text-center">Tags: Important Information!</h2>
+                <ul>
+                    <li>Federal Fish and Wildlife Services REQUIRE a completed tag accompany your bird. We CANNOT accept any bird without a SIGNED and COMPLETELY filled tag/s.  Tag numbers are required for wild turkeys, sea ducks and some exotics (in addition to WILD ID #). </li>
+                    <li>We work by appointment only but will do our best to accommodate schedule within reason.</li>
+                </ul>
+
             </div>
         </section>
     <div class="row">
