--- a/turkeys.html
+++ b/turkeys.html
@@ -39,7 +39,7 @@ Include Srcset-->
                     <li><a href="#domestic/exotic">Domestic/Exotic</a></li>
                     <li><a href="#bearrugs">Bear Rugs</a></li>
                     <li><a href="#habitats">Habitats</a></li>
-                    <li><a href="#fieldcare">Field Care</a></li>
+                    <li><a href="fieldCare.html">Field Care</a></li>
                     <li class="icon">
                         <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
                     </li>
