added fieldCare image

--- a/fieldCare.html
+++ b/fieldCare.html
@@ -67,7 +67,7 @@ Showcase eagle-->
                     <li>Try to keep a gallon ziplock or bread bag with you when you hunt and place in the bag, then your game bag, however, it's best to carry the bird by the feet.  I prefer you DON'T use a nylon stocking. </li>
                     <li>NEVER wrap your bird in newspaper of any kind, the newsprint can bleed on feathers. </li>
                     <li>Wipe excess blood off with a wet cloth or paper towel. Use only water, even creek water is fine. </li>
-                    <li>Wrap bird's head in paper towel and fold over the bird's back (see photo) and freeze in double ziplock bag.</li>
+                    <li>Wrap bird's head in paper towel and fold over the bird's back <a href="img/fieldCare.jpg">(see photo)</a> and freeze in double ziplock bag.</li>
                 </ul>
                 <br>
                 <p>If you already have a bird in the freezer and have not followed these instructions to the letter, that's fine, but we will need to assess specimen after it has been thawed.</p>
