changed logo size on non-homepages

--- a/fieldCare.html
+++ b/fieldCare.html
@@ -17,11 +17,11 @@ Showcase eagle-->
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-xs-12 col-md-10 banner">
+            <div class="col-xs-4 col-sm-4 col-md-4"></div>
+            <div class="col-xs-4 col-sm-4 col-md-4 banner">
                 <img class="img-responsive" src="img/spreadwings.png" alt="Spread Wings">
             </div>
-            <div class="col-md-1"></div>
+            <div class="col-xs-4 col-sm-4 col-md-4"></div>
         </div>
         <header class="row">
             <div class="col-xs-12 col-md-12 text-center text-uppercase text-large">
